# BALLS

./: .gitignore  BALLS.sln  CMakeLists.txt  README.md  run.sh  setup.sh
BALLS/: BALLS.cpp  BALLS.h  BALLS.vcxproj  BALLS.vcxproj.filters  CMakeLists.txt
BALLS/core/: Atmosphere.h  Constants.h  Curve.h  Effects.h  EndCondition.h  Interpolation.h  Logger.h  Main.h  Misc.h  Projectile.h  Quaternion.h  Simulation.h  Vector3.h  core.h
BALLS/graphics/: graph.h  graphics.h
BALLS/io/: ConfigReader.h  ConfigTest.txt  Console.h  CurveReader.h  CurveTest.txt  CurveWriter.h  LoadingBar.h  ProjectileLoader.h  io.h
BALLS/solvers/: drag.h  solvers.h
configuration/: ConfigTest.txt
